# atracks

./: Apptainer  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  write_version_info.py
notebooks/: basic_analysis.ipynb
scripts/: entrypoint.sh
src/atracks/: _version.py  analysis.py  app.py  preprocess.py  utils.py  vis.py
